--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 20,
+			"current": 21,
 			"list": [
 				{
 					"id": -1,
@@ -156,7 +156,13 @@
 				{
 					"id": -1,
 					"name": "答题评价",
-					"pathName": "pages/evaluate/main"
+					"pathName": "pages/evaluate/main",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "订单页面",
+					"pathName": "pages/order/main"
 				}
 			]
 		}
