--- a/project.config.json
+++ b/project.config.json
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 21,
+			"current": 22,
 			"list": [
 				{
 					"id": -1,
@@ -162,7 +162,14 @@
 				{
 					"id": -1,
 					"name": "订单页面",
-					"pathName": "pages/order/main"
+					"pathName": "pages/order/main",
+					"query": ""
+				},
+				{
+					"id": 22,
+					"name": "修改孩子身高",
+					"pathName": "pages/changechildrenhight/main",
+					"query": ""
 				}
 			]
 		}
