--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"urlCheck": false,
 		"es6": true,
 		"postcss": false,
-		"minified": false,
+		"minified": true,
 		"newFeature": true,
 		"nodeModules": true
 	},
@@ -31,7 +31,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 22,
+			"current": 23,
 			"list": [
 				{
 					"id": -1,
@@ -169,6 +169,12 @@
 					"id": 22,
 					"name": "修改孩子身高",
 					"pathName": "pages/changechildrenhight/main",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "得分画面2",
+					"pathName": "pages/resultpage2/main",
 					"query": ""
 				}
 			]
