--- a/src/app.json
+++ b/src/app.json
@@ -30,7 +30,8 @@
     "pages/space/main",
     "pages/writemsg/main",
     "pages/share/main",
-    "pages/canvaspage/main"
+    "pages/canvaspage/main",
+    "pages/chart/main"
     
   ],
   "window": {
